--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # The available themes options are "default", "air", "sunrise", "mint", "dirt" and "contrast"
-title                    : "Notes from the Noise Floor"
+title                    : notes from the noise floor"
 title_separator          : "-"
 name                     : &name "Alexis Gee"
-description              : &description "Not optimized for engagement."   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : &description "not optimized for engagement."   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://alexis-gee.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -26,8 +26,8 @@ author:
   avatar           : "profile.png"
   name             : "Alexis Gee"
   pronouns         : "she/her"
-  bio              : "Tech + Media. Broadcast engineer with an eye on information ecosystems and digital security. Here to escape the algorithm."
-  location         : "Earth"
+  bio              : "tech + media. broadcast engineer with an eye on information ecosystems and digital security. here to escape the algorithm."
+  location         : "earth"
   uri              : # URL
   email            : #"none@example.org" 
 
